--- a/lectures/day_10/user_crud_val_bcrypt/Pipfile
+++ b/lectures/day_10/user_crud_val_bcrypt/Pipfile
@@ -4,9 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "==2.0.3"
+flask = "*"
 pymysql = "*"
-werkzeug = "==2.0.3"
 flask-bcrypt = "*"
 
 [dev-packages]
